# ccbf-control

./: .gitignore  Dockerfile  README.md  agent.py  cbf_wrappers.py  controller.py  dynamics_wrappers.py  estimator.py  experiment.py  main.py  package.xml  project_path.py  pyproject.toml  requirements.txt  setup.py  simulate.py  simulate_monte_carlo.py  visualize.py  visualize_mc.py
.devcontainer/: devcontainer.json  docker-compose.yml
.pkgs/: cbfkit-0.1.1-py3-none-any.whl
.poetry/arm64/: poetry.lock.arm64  pyproject.toml.arm64
bicycle/: __init__.py  control_helpers.py  ffcbf_qp_controller.py  intersection_config.py  nominal_controllers.py  timing.py
bicycle/controllers/: cbf_qp_controller.py  ffcbf_qp_controller.py  nominal_controllers.py
bicycle/dynamic/: __init__.py  init_warehouse.py  models.py  objective_functions.py  physical_params.py  timing_params.py
bicycle/dynamics/: __init__.py
bicycle/settings/: __init__.py
core/: agent.py  dynamics_wrappers.py  simulate_mc_merging.py  solve_cvxopt.py
core/controllers/: cbf_qp_controller.py  chance_constrained_cbf_controller.py  consolidated_cbf_controller.py  consolidated_cbf_controller_old.py  controller.py  nn_cbf_controller.py  prb_cbf_controller.py  risk_bounded_cbf_controller.py  stochastic_cbf_controller.py
core/mathematics/: analytical_functions.py  symbolic_functions.py
data/warehouse/: test.pkl
envs/base/: LICENSE.txt
examples/: blackbox_taliro.py  main.py  main_nonlinear_1d.py  main_toy.py  multiagent.py  nonlinear1d_verified.ipynb  nonlinear_verified.py  oscillator.py  replay.py  replay_nonlinear_1d.py  replay_oscillator.py  replay_oscillator_paper.py  replay_toy.py  replay_toy_paper.py  staliro_ex.py  test.py
examples/nonlinear_1d/: new_main.py  verified_main.py
helpers/: gaussian_pdf.py  sigmoids.py
quadrotor/: quadrotor_qp_controller.py  quadrotor_qp_controller_gurobi.py
quadrotor/settings/: __init__.py  cbfs.py  cbfs_archived.py  control_params.py  filter_dynamics.py  initial_conditions.py  physical_params.py  quadrotor_dynamics.py  timing_params.py  winds.py
rover_experiments/: experiment.py
src/: package.xml
src/ccbf/: setup.cfg  setup.py
visualizing/: helpers.py
viz/: bicycle_vis_highway.py  bicycle_vis_highway_merging.py  bicycle_vis_intersection.py  bicycle_vis_intersection_jerk.py  helpers.py  quadrotor_vis.py  quadrotor_vis2.py  quadrotor_visSPHERE.py  simple2ndorder_vis.py  simple_vis.py
(+432 files in other folders)
