[tool.poetry]
name = "ccbf-control"
version = "0.1.0"
description = "Simulating dynamical systems using consolidated control barrier function based controllers."
authors = ["Mitchell Black <6lack.mitchell@gmail.com>"]
license = "MIT"
packages = [{include="core", from="src"}, {include="models", from="src"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"
control = "^0.9.2"
Pillow = "9.1.0"
sympy = "^1.10.1"
nptyping = "^2.2.0"
cvxopt = "^1.3.0"
Cython = "^0.29.30"
symengine = "^0.9.2"
PyQt5 = "^5.15.7"
squaternion = "^0.3.4"
numdifftools = "^0.9.40"
jax = "^0.4.4"
jaxlib = "^0.4.4"

[tool.poetry.dev-dependencies]
pylint = "^2.15.4"
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
