[tool.poetry]
name = "ccbf-control"
version = "0.1.0"
description = "Simulating dynamical systems using consolidated control barrier function based controllers."
authors = ["Mitchell Black <6lack.mitchell@gmail.com>"]
license = "MIT"
packages = [{include="examples"}, {include="models", from="src"}]

[tool.poetry.dependencies]
python =">=3.8, <3.11"
numpy = "^1.23.1"
control = "^0.9.2"
Pillow = "9.1.0"
sympy = "^1.10.1"
cvxopt = "^1.3.0"
PyQt5 = "^5.15.7"
squaternion = "^0.3.4"
numdifftools = "^0.9.40"
cmake = "^3.27.9"
dreal = "^4.21.6.2"
fossil = ">=2.0.0"
psy-taliro = "^1.0.0b9"
rtamt = "^0.3.5"

[tool.poetry.dev-dependencies]
pylint = "^2.15.4"
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
